--- a/BedLightESP/packages.config
+++ b/BedLightESP/packages.config
@@ -4,6 +4,7 @@
   <package id="nanoFramework.Graphics.Core" version="1.2.22" targetFramework="netnano1.0" />
   <package id="nanoFramework.Hardware.Esp32" version="1.6.19" targetFramework="netnano1.0" />
   <package id="nanoFramework.Iot.Device.DhcpServer" version="1.2.644" targetFramework="netnano1.0" />
+  <package id="nanoFramework.Json" version="2.2.138" targetFramework="netnano1.0" />
   <package id="nanoFramework.ResourceManager" version="1.2.19" targetFramework="netnano1.0" />
   <package id="nanoFramework.Runtime.Events" version="1.11.18" targetFramework="netnano1.0" />
   <package id="nanoFramework.Runtime.Native" version="1.7.1" targetFramework="netnano1.0" />
@@ -12,10 +13,12 @@
   <package id="nanoFramework.System.Device.Model" version="1.2.670" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Spi" version="1.3.52" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Device.Wifi" version="1.5.91" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.IO.FileSystem" version="1.1.54" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.IO.Streams" version="1.1.59" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Math" version="1.5.43" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Net" version="1.11.1" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Net.Http.Server" version="1.5.150" targetFramework="netnano1.0" />
+  <package id="nanoFramework.System.Runtime" version="1.0.27" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Text" version="1.2.54" targetFramework="netnano1.0" />
   <package id="nanoFramework.System.Threading" version="1.1.32" targetFramework="netnano1.0" />
   <package id="nanoFramework.WebServer" version="1.2.63" targetFramework="netnano1.0" />
